# The-art-of-cooperation

./: .env  Cargo.toml  Readme.md
frontend/: package-lock.json  svg-trimmer.py
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  Grid.js
src/: auth.rs  board.rs  lib.rs  main.rs  pixel.rs
tests/: board_tests.rs  color_tests.rs  pixel_tests.rs
